--- a/locales/en.json
+++ b/locales/en.json
@@ -3,7 +3,7 @@
 	"Blockchain Demo": "Blockchain",
 	"Block": "Blocco",
 	"Blockchain": "Blockchain",
-	"Distributed": "Distribuito",
+	"Distributed": "Distribuita",
 	"Tokens": "Tokens",
 	"Coinbase": "Coinbase",
 	"Data": "Dati",
